# cxx20-format

./: CMakeLists.txt  README
config/: Cxx20FormatConfig.cmake.in  PatchLibstdcxx.cmake  check_libstdcxx_version.cc  config.h.in
diffs/: README  c++20-format.diff  charconv-bits.diff  charconv.diff  floating_to_chars.diff
include/: c++20-format.h
include/bits/c++20-format/: charconv-bits.h  charconv.h  global.h
include/std/: format
src/c++17/: floating_to_chars.cc
test/: format-test.cc
